=== Deluge 1.3.0 (In Development) ===
	* Improved Logging
	* Removed the AutoAdd feature on the core. It's now handled with the AutoAdd
	plugin, which is also shipped with Deluge, and it does a better job and
	now, it even supports multiple users perfectly.

==== Core ====
	* Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
	* Implement #457 progress bars for folders
	* Implement #1012 httpdownloader supports gzip decoding
	* #496: Remove deprecated functions in favour of get_session_status()
	* #1112: Fix renaming files in add torrent dialog
	* #1247: Fix deluge-gtk from hanging on shutdown
	* #995: Rewrote tracker_icons
	* Make the distinction between adding to the session new unmanaged torrents
	and torrents loaded from state. This will break backwards compatability.
	* Pass a copy of an event instead of passing the event arguments to the
	event handlers. This will break backwards compatability.
	* Allow changing ownership of torrents.
	* File modifications on the auth file are now detected and when they happen,
	the file is reloaded. Upon finding an old auth file with an old format, an
	upgrade to the new format is made, file saved, and reloaded.

==== GtkUI ====
	* Fix uncaught exception when closing deluge in classic mode
	* Allow changing ownership of torrents

==== WebUI ====
	* Migrate to ExtJS 3.1
	* Add gzip compression of HTTP data to the server
	* Improve the efficiency of the TorrentGrid

==== Blocklist ====
	* Implement local blocklist support
	* #861: Pause transfers until blocklist is imported

=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver