@@ -2,7 +2,7 @@ from twisted.trial import unittest
 
 import common
 
-from deluge.core.authmanager import AuthManager
+from deluge.core.authmanager import AuthManager, AUTH_LEVEL_ADMIN
 
 class AuthManagerTestCase(unittest.TestCase):
     def setUp(self):
@@ -11,4 +11,7 @@ class AuthManagerTestCase(unittest.TestCase):
 
     def test_authorize(self):
         from deluge.ui import common
-        self.assertEquals(self.auth.authorize(*common.get_localhost_auth()), 10)
+        self.assertEquals(
+            self.auth.authorize(*common.get_localhost_auth()),
+            AUTH_LEVEL_ADMIN
+        )
