@@ -1,53 +1,80 @@
-import os
-import sys
-import time
-import signal
-import tempfile
-
-from subprocess import Popen, PIPE
 
 import common
 
 from twisted.trial import unittest
 
+from deluge import error
+from deluge.core.authmanager import AUTH_LEVEL_ADMIN, AUTH_LEVEL_DEFAULT
 from deluge.ui.client import client
-
-CWD = os.path.dirname(os.path.dirname(os.path.dirname(__file__)))
-
-DAEMON_SCRIPT = """
-import sys
-import deluge.main
-
-sys.argv.extend(['-d', '-c', '%s', '-Linfo'])
-
-deluge.main.start_daemon()
-"""
 
 class ClientTestCase(unittest.TestCase):
 
     def setUp(self):
-        config_directory = common.set_tmp_config_dir()
-
-        fp = tempfile.TemporaryFile()
-        fp.write(DAEMON_SCRIPT % config_directory)
-        fp.seek(0)
-
-        self.core = Popen([sys.executable], cwd=CWD,
-                          stdin=fp, stdout=PIPE, stderr=PIPE)
-
-        time.sleep(2) # Slight pause just incase
+        self.core = common.start_core()
 
     def tearDown(self):
         self.core.terminate()
 
     def test_connect_no_credentials(self):
-        return # hack whilst core is broken
+
         d = client.connect("localhost", 58846)
-        d.addCallback(self.assertEquals, 10)
+
+        def on_failure(failure):
+            self.assertEqual(
+                failure.trap(error.AuthenticationRequired),
+                error.AuthenticationRequired
+            )
+            self.addCleanup(client.disconnect)
+
+        d.addErrback(on_failure)
+        return d
+
+    def test_connect_localclient(self):
+        from deluge.ui import common
+        username, password = common.get_localhost_auth()
+        d = client.connect(
+            "localhost", 58846, username=username, password=password
+        )
 
         def on_connect(result):
+            self.assertEqual(client.get_auth_level(), AUTH_LEVEL_ADMIN)
             self.addCleanup(client.disconnect)
             return result
 
         d.addCallback(on_connect)
+        return d
+
+    def test_connect_bad_password(self):
+        from deluge.ui import common
+        username, password = common.get_localhost_auth()
+        d = client.connect(
+            "localhost", 58846, username=username, password=password+'1'
+        )
+
+        def on_failure(failure):
+            self.assertEqual(
+                failure.trap(error.BadLoginError),
+                error.BadLoginError
+            )
+            self.addCleanup(client.disconnect)
+
+        d.addErrback(on_failure)
+        return d
+
+    def test_connect_without_password(self):
+        from deluge.ui import common
+        username, password = common.get_localhost_auth()
+        d = client.connect(
+            "localhost", 58846, username=username
+        )
+
+        def on_failure(failure):
+            self.assertEqual(
+                failure.trap(error.AuthenticationRequired),
+                error.AuthenticationRequired
+            )
+            self.assertEqual(failure.value.username, username)
+            self.addCleanup(client.disconnect)
+
+        d.addErrback(on_failure)
         return d
