@@ -3,6 +3,8 @@
 	* Removed the AutoAdd feature on the core. It's now handled with the AutoAdd
 	plugin, which is also shipped with Deluge, and it does a better job and
 	now, it even supports multiple users perfectly.
+	* Authentication/Permission exceptions are now sent to clients and recreated
+	there to allow acting upon them.
 
 ==== Core ====
 	* Implement #1063 option to delete torrent file copy on torrent removal - patch from Ghent
@@ -20,10 +22,16 @@
 	* File modifications on the auth file are now detected and when they happen,
 	the file is reloaded. Upon finding an old auth file with an old format, an
 	upgrade to the new format is made, file saved, and reloaded.
+	* Authentication no longer requires a username/password. If one or both of
+	these is missing, an authentication error will be sent to the client
+	which sould then ask the username/password to the user.
 
 ==== GtkUI ====
 	* Fix uncaught exception when closing deluge in classic mode
 	* Allow changing ownership of torrents
+	* Host entries in the Connection Manager UI are now editable. They're
+	now also migrated from the old format were automatic localhost logins were
+	possible, which no longer is, this fixes #1814.
 
 ==== WebUI ====
 	* Migrate to ExtJS 3.1
